--- a/layouts/partials/menu-footer.html
+++ b/layouts/partials/menu-footer.html
@@ -1,12 +1,10 @@
 <left>
-    <!-- Place this tag where you want the button to render. -->
-    <!-- <a class="github-button" href="https://github.com/nnthanh101/serverless-data-lake/archive/master.zip" data-icon="octicon-cloud-download" aria-label="Download nnthanh101/serverless-data-lake on GitHub">Download</a> -->
-
-    <!-- Place this tag where you want the button to render. 
-    <a class="github-button" href="https://github.com/nnthanh101/serverless-data-lake" data-icon="octicon-star" data-show-count="true" aria-label="Star nnthanh101/serverless-data-lake on GitHub">Star</a>-->
-
-    <!-- Place this tag where you want the button to render. 
-    <a class="github-button" href="https://github.com/nnthanh101/serverless-data-lake/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork nnthanh101/serverless-data-lake on GitHub">Fork</a>-->
+    <!-- 000002 -->
+     <b> Workshop</b> <br>
+    <img src="https://hitwebcounter.com/counter/counter.php?page=7830891&style=0038&nbdigits=9&type=page&initCount=0" title="Migrate" Alt="web counter"   border="0" /></a>  <br>
+     <b> <a href="https://cloudjourney.awsstudygroup.com/">Cloud Journey</a></b> <br>
+    <img src="https://hitwebcounter.com/counter/counter.php?page=7830807&style=0038&nbdigits=9&type=page&initCount=0" title="Total CLoud Journey" Alt="web counter"   border="0"   />
+     
 </left>
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
